--- a/WebContent/rotas.xhtml
+++ b/WebContent/rotas.xhtml
@@ -9,7 +9,24 @@
 <title>Rotas</title>
 </h:head>
 <h:body>
-<
-
+<h:form>
+	<h:panelGrid columns="4">
+	
+		<h:outputLabel value="Nome: " />
+		<h:inputText name="nome" value="#{rotaMB.rota.nome}" size="20" maxlength="50" />
+		
+		<h:commandButton name="cmd" value="Adicionar" action="#{rotaMB.adicionar}" />
+		<h:commandButton name="cmd" value="Pesquisar" action="#{rotaMB.pesquisar}" />
+	</h:panelGrid>
+	
+	<h:dataTable value="#{rotaMB.rotas}" var="rota" >
+		<h:column>#{rota.nome}
+			<f:facet name="header">Nome</f:facet>
+		</h:column>
+		<h:column>#{rota.tempoTotal}
+			<f:facet name="header">Tempo total</f:facet>
+		</h:column>
+	</h:dataTable>
+</h:form>
 </h:body>
 </html>
