--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -10,21 +10,17 @@
 </h:head>
 <h:body>
 	<h:form>
-		<h:panelGrid columns="3">
+		<h:panelGrid columns="2">
 			<h:outputLabel value="Usuário: " />
-			<h:inputText name="usuario" id="txtUsuario" value="#{loginMB.usuario.usuario}" size="10" validatorMessage="O usuário deve ter 5 e 20 caracteres" required="">
-				<f:validateLength minimum="5" maximum="20" />
-			</h:inputText>
-			<h:message for="txtUsuario" />
+			<h:inputText name="usuario" id="txtUsuario" value="#{loginMB.usuario.usuario}" size="10" />
 			 
 			<h:outputLabel value="Senha: " />		
-			<h:inputSecret name="senha" id="txtSenha" value="#{loginMB.usuario.senha}" size="10" validatorMessage="A senha deve ter no mínimo 6 caracteres" required="">
-				<f:validateLength minimum="6" />
-			</h:inputSecret>
-			<h:message for="txtSenha" />
-		
+			<h:inputSecret name="senha" id="txtSenha" value="#{loginMB.usuario.senha}" size="10" />
+
 			<h:commandButton value="Entrar" action="#{loginMB.logar}"/>
-		</h:panelGrid>	
+			<h:commandButton value="Registrar-se" action="#{loginMB.abreRegistrar}"/>
+		</h:panelGrid>
+		<h:messages layout="table"/>
 	</h:form>
 </h:body>
 </html>
