--- a/WebContent/rotas.xhtml
+++ b/WebContent/rotas.xhtml
@@ -9,6 +9,13 @@
 <title>Rotas</title>
 </h:head>
 <h:body>
+<h:form id="formLogin">
+	<h:commandButton name="cmd" value="Ver usuario" action="#{loginMB.ver}" />
+	<h:commandButton name="cmd" value="Excluir usuario" action="#{loginMB.excluir}" />
+	<h:inputHidden id="msg" />
+	<h:message for="msg" />
+</h:form>
+
 <h:form>
 	<h:panelGrid columns="4">
 	
