Commit alterar usuário funcionando!

--- a/WebContent/usuario.xhtml
+++ b/WebContent/usuario.xhtml
@@ -12,13 +12,13 @@
 	<h:form id="formBody">
 		<h:panelGrid columns="3">
 			<h:outputLabel value="Usuário: " />
-			<h:inputText name="usuario" id="txtUsuario" value="#{loginMB.usuario.usuario}" size="10" validatorMessage="O usuário deve ter 5 e 20 caracteres" required="true" requiredMessage="Campo obrigátorio">
+			<h:inputText name="usuario" id="txtUsuario" value="#{loginMB.usuario.usuario}" size="10" validatorMessage="O usuário deve ter 5 e 20 caracteres" required="true" requiredMessage="Campo obrigátorio" disabled="#{loginMB.usuario.logado}">
 				<f:validateLength minimum="5" maximum="20" />
 			</h:inputText>
 			<h:message for="txtUsuario" />
 			 
 			<h:outputLabel value="Senha: " />		
-			<h:inputSecret name="senha" id="txtSenha" value="#{loginMB.usuario.senha}" size="10" validatorMessage="A senha deve ter no mínimo 6 caracteres" required="">
+			<h:inputSecret name="senha" id="txtSenha" value="#{loginMB.usuario.senha}" size="10" validatorMessage="A senha deve ter no mínimo 6 caracteres">
 				<f:validateLength minimum="6" />
 			</h:inputSecret>
 			<h:message for="txtSenha" />
@@ -31,10 +31,11 @@
 			<h:inputText type="email" size="20" maxlength="50" name="email" value="#{loginMB.usuario.email}" validatorMessage="Precisa ser um email" id="txtEmail" />
 			<h:message for="txtEmail" />
 			
-			<h:commandButton value="Registrar" action="#{loginMB.registrar}"/>
-			<a href="login.xhtml">Voltar</a>
+			<h:commandButton value="Registrar" action="#{loginMB.registrar}" rendered="#{loginMB.usuario.logado != true}"/>
+			<h:commandButton value="Salvar" action="#{loginMB.alterar}" rendered="#{loginMB.usuario.logado == true}"/>
+			<a href="rotas.xhtml">Voltar</a>
 		</h:panelGrid> 
-		<h:inputHidden id="txtUsuario2"></h:inputHidden>
+		<h:inputHidden id="txtUsuario2" />
 		<h:message for="txtUsuario2"/>	
 	</h:form>
 </h:body>
