Commit login logoff

--- a/WebContent/rotas.xhtml
+++ b/WebContent/rotas.xhtml
@@ -12,6 +12,7 @@
 <h:form id="formLogin">
 	<h:commandButton name="cmd" value="Ver usuario" action="#{loginMB.ver}" />
 	<h:commandButton name="cmd" value="Excluir usuario" action="#{loginMB.excluir}" />
+	<h:commandButton name="cmd" value="Sair" action="#{loginMB.sair}" />
 	<h:inputHidden id="msg" />
 	<h:message for="msg" />
 </h:form>
