--- a/WebContent/rotas.xhtml
+++ b/WebContent/rotas.xhtml
@@ -35,6 +35,7 @@
 			<f:facet name="header">Tempo total</f:facet>
 		</h:column>
 		<h:column>
+			<h:commandButton value="Ver" action="#{pontoMB.buscarTodas( rota )}" />
 			<h:commandButton value="Excluir" action="#{rotaMB.excluir( rota )}" />
 			<f:facet name="header">Ações</f:facet>
 		</h:column>
