--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -8,6 +8,8 @@
 <h:head>
 	<meta charset="UTF-8" />
 	<title>Login</title>
+	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
 </h:head>
 <h:body>
 		<h:form id="formBody">
