--- a/WebContent/addrota.xhtml
+++ b/WebContent/addrota.xhtml
@@ -37,9 +37,6 @@
 					<h:commandButton styleClass="btn navbar-btn btn-primary" name="cmd" value="Sair" action="#{loginMB.sair}" />
 				</div>
 				
-				<h:messages layout="table"/>
-				<h:inputHidden id="msg" />
-				<h:message for="msg" />
 			</h:form>
 		</div>
 	  </div>
@@ -94,43 +91,48 @@
 			<h:outputLabel value="Rua: " styleClass="col-sm-2 control-label" />
 				<div class="col-sm-10">		
 					<h:inputText value="#{pontoMB.ponto.rua}" size="30" maxlength="30" name="rua" id="txtRua" styleClass="form-control" />
+					<h:message for="txtRua" styleClass="alert-danger" />
 				</div>
-			<h:message for="txtRua" />
 		</div>			
 		<div class="form-group">
 			<h:outputLabel value="Cidade: " styleClass="col-sm-2 control-label" />
 				<div class="col-sm-10">		
 					<h:inputText value="#{pontoMB.ponto.cidade}" size="30" maxlength="30" name="cidade" id="txtCidade" styleClass="form-control" />
+					<h:message for="txtCidade" styleClass="alert-danger"  />
 				</div>
-			<h:message for="txtCidade" />
 		</div>
 		<div class="form-group">
 			<h:outputLabel value="Estado: " styleClass="col-sm-2 control-label" />
 				<div class="col-sm-10">		
 					<h:inputText value="#{pontoMB.ponto.estado}" size="20" maxlength="20" name="estado" id="txtEstado" styleClass="form-control" />
+					<h:message for="txtEstado" styleClass="alert-danger" />
 				</div>
-			<h:message for="txtEstado" />
 		</div>
 		<div class="form-group">
 			<h:outputLabel value="Número: " styleClass="col-sm-2 control-label" />
 				<div class="col-sm-10">		
 					<h:inputText value="#{pontoMB.ponto.numero}" size="10" maxlength="10" name="numero" id="txtNumero" styleClass="form-control" />
+					<h:message for="txtNumero" styleClass="alert-danger " />
 				</div>
-			<h:message for="txtNumero" />
 		</div>
 		
 		<div class="col-sm-2">
 		</div>
 		
-		<div class="btn-group col-sm-10 form-group">
+		<div class="col-sm-10 form-group">
+			<div class="col-sm-2">
 				<h:commandButton name="cmd" value="Adicionar" action="#{pontoMB.adicionar}" rendered="#{pontoMB.ponto.id == 0}" styleClass="btn btn-info " />
 				<h:commandButton name="cmd" value="Salvar" action="#{pontoMB.salvar}" rendered="#{pontoMB.ponto.id != 0}" styleClass="btn btn-info" />
+			</div>
+			<div class="col-sm-2">
 				<h:commandButton name="cmd" value="Calcular Pontos" action="#{pontoMB.gerar}" styleClass="btn btn-info" />
+			</div>
+			<div class="col-sm-4">
 				<h:commandButton name="cmd" value="Concluir" action="#{pontoMB.concluir}" styleClass="btn btn-info" />
+			</div>
 		</div>
 			
-		<div class="form-group">
-			<h:dataTable value="#{pontoMB.pontos}" var="ponto" styleClass="table table-striped table-bordered table-hover table-condensed" >
+			<h:dataTable value="#{pontoMB.pontos}" var="ponto" styleClass="table table-striped table-bordered table-hover table-condensed" rendered="#{pontoMB.ponto.id == 0}" >
 				<h:column>#{ponto.cep}
 					<f:facet name="header">CEP</f:facet>
 				</h:column>
@@ -159,7 +161,6 @@
 					<f:facet name="header">Ações</f:facet>
 				</h:column>
 			</h:dataTable>
-		</div>
 	</h:form>
 </div>
 </h:body>
