--- a/WebContent/rotas.xhtml
+++ b/WebContent/rotas.xhtml
@@ -36,8 +36,6 @@
 				<div class="form-group">
 					<h:commandButton styleClass="btn navbar-btn btn-primary" name="cmd" value="Sair" action="#{loginMB.sair}" />
 				</div>
-				
-				
 				<h:messages layout="table"/>
 				<h:inputHidden id="msg" />
 				<h:message for="msg" />
@@ -68,16 +66,18 @@
 		<div class="table-responsive">
 			
 			<h:dataTable value="#{rotaMB.rotas}" var="rota" styleClass="table table-striped table-bordered table-hover table-condensed" >
-				<h:column>#{rota.nome}
-					<f:facet name="header">Nome</f:facet>
+				<h:column><div class="col-sm-12" >#{rota.nome}</div>
+					<div class="col-sm-12" ></div>
+					<div class="col-sm-12" ><f:facet name="header">Nome</f:facet></div>
 				</h:column>
-				<h:column>#{rota.tempoTotal}
-					<f:facet name="header">Tempo total</f:facet>
+				<h:column><div class="col-sm-10" >#{rota.tempoTotal}</div>
+					<div class="col-sm-12" ></div>
+					<div class="col-sm-12" ><f:facet name="header">Tempo total</f:facet></div>
 				</h:column>
 				<h:column>
 					<div class="btn-group" role="group" aria-label="...">
-						<h:commandButton styleClass="btn btn-success" value="Ver" action="#{pontoMB.buscarTodas( rota )}" />
-						<h:commandButton styleClass="btn btn-success" value="Excluir" action="#{rotaMB.excluir( rota )}" />
+							<h:commandButton styleClass="btn btn-success" value="Ver" action="#{pontoMB.buscarTodas( rota )}" />
+							<h:commandButton styleClass="btn btn-success" value="Excluir" action="#{rotaMB.excluir( rota )}" />
 					</div>
 					<f:facet name="header">Ações</f:facet>
 				</h:column>
