--- a/WebContent/esqueci.xhtml
+++ b/WebContent/esqueci.xhtml
@@ -12,12 +12,36 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </h:head>
 <h:body>
-<h:form>
-	<h:outputLabel value="Insira o seu e-mail: " />
-	<h:inputText value="#{emailMB.to}" size="20" maxlength="50" name="email" />
-	<h:commandButton value="Enviar" action="#{emailMB.enviar}" />
-	<a href="login.xhtml">Voltar</a> 
-	<h:messages />
-</h:form>
+<div class="container">
+	<nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="rotas.xhtml">Rotas</a>
+		</div>
+	   </div>
+	</nav>
+	<h:form styleClass="form-horizontal">
+		<div class="form-group">
+			<h:outputLabel value="Insira o seu e-mail: " styleClass="col-sm-2 control-label" />
+			<div class="col-sm-10">
+				<h:inputText styleClass="form-control" value="#{emailMB.to}" size="20" maxlength="50" name="email" />
+			</div>
+		</div>
+		
+		<div class="form-group">
+		    <div class="col-sm-offset-2 col-sm-10">
+				<h:commandButton styleClass="btn btn-primary" value="Enviar" action="#{emailMB.enviar}" />
+				<a class="btn btn-primary" href="login.xhtml" >Voltar</a> 
+			</div>
+		</div>
+		<h:messages layout="table"/>
+	</h:form>
+</div>
 </h:body>
 </html>
