--- a/WebContent/rotas.xhtml
+++ b/WebContent/rotas.xhtml
@@ -15,25 +15,19 @@
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
 	      <a class="navbar-brand" href="rotas.xhtml">Rotas</a>
 		</div>
 		
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
+		<div>
 			<h:form styleClass="navbar-form navbar-right"  id="formBody" role="search" >
-				<div class="form-group">
+				<div class="form-group col-xs-4">
 					<h:commandButton styleClass="btn navbar-btn btn-primary" name="cmd" value="Ver usuario" action="#{loginMB.ver}" />
 				</div>
-				<div class="form-group">
+				<div class="form-group col-xs-4 ">
 					<h:commandButton name="cmd" styleClass="btn navbar-btn btn-primary" value="Excluir usuario" action="#{loginMB.excluir}" />
 				</div>
-				<div class="form-group">
+				<div class="col-xs-1"></div>
+				<div class="form-group col-xs-2">
 					<h:commandButton styleClass="btn navbar-btn btn-primary" name="cmd" value="Sair" action="#{loginMB.sair}" />
 				</div>
 				<h:messages layout="table"/>
